ทบทวน + เพิ่มคอมเม้น

--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -63,7 +63,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('test')"
+        "print('test') # ข้อความต้องครอบ เเต่รอบด้วย single/double quote ก็ได้"
       ],
       "metadata": {
         "colab": {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "lWOn8HAbRhdK"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +342,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('stat','สถิติ',sep='')"
+        "print('stat','สถิติ',sep='') # ไม่เว้นวรรค"
       ],
       "metadata": {
         "colab": {
@@ -399,7 +399,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('stat', end=', ')\n",
+        "print('stat', end=', ')     # ข้อความอยู่บรรทัดเดียวกัน\n",
         "print('SIDS')"
       ],
       "metadata": {
@@ -438,7 +438,7 @@
       "metadata": {
         "id": "odGsndI3TD52"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,18 +467,17 @@
     {
       "cell_type": "code",
       "source": [
-        "c = a/b\n"
+        "c = a/b"
       ],
       "metadata": {
         "id": "rF6G1T5GTOQg"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "c"
       ],
       "metadata": {
@@ -488,7 +487,7 @@
         "id": "diOKSjhrTYVy",
         "outputId": "25ec6894-fc6b-4135-f0f7-928b0b19dd28"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +522,7 @@
         "id": "djRtHMArUKPc",
         "outputId": "189e7b06-21f0-41a5-f028-06824268efc0"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +557,7 @@
         "id": "g0AUuBibUdmn",
         "outputId": "9595cf4e-256d-465f-de69-7d879aa2a44f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +593,7 @@
         "id": "WYCTaa3LeivI",
         "outputId": "63284a55-dcc0-4743-d1bb-5ce7af04a93d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +623,7 @@
         "id": "AaBBYxCsemrN",
         "outputId": "77c416c3-d8ef-4987-d663-1716f150e777"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +653,7 @@
         "id": "jdHGpdCeepyx",
         "outputId": "2908d209-78e4-4b17-9390-a18e9586550d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +747,7 @@
         "id": "EWWpPiEAifRy",
         "outputId": "e4f092a7-6dd6-48a3-c60c-5c7924edd2b7"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +770,7 @@
         },
         "outputId": "48730886-2b3c-43f7-aaa9-fa6701d6adee"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +793,7 @@
         "id": "u64NGXiCYKgM",
         "outputId": "a73af9f9-5f3a-4276-9458-5147c29d40de"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +816,7 @@
         "id": "R7LX5RkNX13U",
         "outputId": "2220563e-46ac-4ec8-a818-d42e8d10c20a"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +841,7 @@
         "id": "mVxIA-ygZQ87",
         "outputId": "cad17fc7-d30a-4ea3-d908-cbe6ccbdd18f"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,7 +861,7 @@
       "metadata": {
         "id": "BMWLQp3HaPZ7"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -877,7 +876,7 @@
         "id": "060E9xI7tJaG",
         "outputId": "875b9c2e-60e7-4a17-ec09-d033cb807fd9"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +900,8 @@
     {
       "cell_type": "code",
       "source": [
-        "f'{1.009:.2f}' # 2f คือการเลขที่มีทศนิยมหลายตำเเหน่งให้เป็น 2 ตำแหน่ง"
+        "f'{1.009:.2f}' # 2f คือการเลขที่มีทศนิยมหลายตำเเหน่งให้เป็น 2 ตำแหน่ง (f=forn)\n",
+        "                   #มีปัดเศษขึ้น"
       ],
       "metadata": {
         "id": "GssHgz0zfsSH",
@@ -911,7 +911,7 @@
           "height": 34
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -929,6 +929,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "f'{c:.2f}' # c คือตัวแปร c ที่เราสร้างเเล้วด้านบน"
+      ],
+      "metadata": {
+        "id": "y6i7RkhnbUaK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "digit\n"
@@ -940,7 +951,7 @@
     {
       "cell_type": "code",
       "source": [
-        "f'{1:03d}' #อยากให้เลขที่ใส่มีกี่หลัก เช่น 1 ในรูปแบบมี 3 หลัก"
+        "f'{1:03d}' #อยากให้เลขที่ใส่มีกี่หลัก เช่น เลข 1 ในรูปแบบเลข 3 หลัก"
       ],
       "metadata": {
         "id": "W41qF4ylf2RB",
@@ -950,7 +961,7 @@
           "height": 34
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +1008,7 @@
       "metadata": {
         "id": "WZ7UHpFRtirB"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1019,7 @@
       "metadata": {
         "id": "_7-1_R8YtmPu"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1023,7 +1034,7 @@
         "id": "iR1F_3gXtpqA",
         "outputId": "8c8ae13b-99f1-4332-b5ab-f5ff0c340780"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1054,7 @@
       "metadata": {
         "id": "ToiDzo_RtteU"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1058,7 +1069,7 @@
         "id": "SD5NdgoOtv54",
         "outputId": "db89b123-defd-48c3-9f45-ecca836e2576"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1098,7 @@
       "metadata": {
         "id": "1kvzb3yyt3zB"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1103,7 +1114,7 @@
         "id": "e3iN8lIrt7AX",
         "outputId": "f23e3176-be20-4b37-c1ed-82301aee4baf"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1144,7 @@
       "metadata": {
         "id": "UCeFO3Xhulln"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1148,7 +1159,7 @@
         "id": "Mzll_99fuuUC",
         "outputId": "40431c92-b952-4ca7-aa33-1841958ef454"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1174,7 +1185,7 @@
         "id": "k8OSG4wEu7qr",
         "outputId": "e7d032f0-d38c-4a6a-a6f4-8422968feb28"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1200,7 +1211,7 @@
         "id": "EUHK9PhGvB4Z",
         "outputId": "1a53b526-1069-4b47-c0bf-a13300417d12"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1235,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,7 +1263,7 @@
       "metadata": {
         "id": "DPBMihn-vKyp"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1263,7 +1274,7 @@
       "metadata": {
         "id": "pj14n8PYvQJA"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1278,7 +1289,7 @@
         "id": "kY6iwkEsvTwy",
         "outputId": "eef58a5d-c785-4f57-ca4b-2f9ca8016e8b"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1312,7 @@
         "id": "vcRrzk_QvWoE",
         "outputId": "673f0997-8005-48e2-9e4e-4bbc311954c3"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1341,7 @@
       "metadata": {
         "id": "fPWokv4cve2g"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1345,7 +1356,7 @@
         "id": "rf30M4Zjvj5G",
         "outputId": "49d45d4e-2348-4567-a04b-18371b8a27c9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1386,7 +1397,7 @@
         "id": "zMq2ttHTwNp_",
         "outputId": "0d09ae26-b846-4188-8989-a41ac10b72af"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1409,7 +1420,7 @@
         "id": "7yo0hgO5wQ7o",
         "outputId": "205b8c0b-fb12-4c64-8425-0d6e83b07ff8"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,7 +1443,7 @@
         "id": "VWp_zgwIwUBW",
         "outputId": "61695a84-fd7a-4a62-ba56-076acec89bad"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1475,7 @@
         "id": "qJXV88hteXEZ",
         "outputId": "9d780f79-4cb6-41a2-a7fe-57b16ae2afa7"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1484,7 +1495,7 @@
       "metadata": {
         "id": "XMrOjBDcflHq"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1500,7 +1511,7 @@
         "id": "Y2oYHGaQeWpa",
         "outputId": "6dbcc14c-8903-4aaf-b1a4-39c68137a2e4"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1519,6 +1530,7 @@
       "cell_type": "code",
       "source": [
         "str_a2int = int(str_a) #เปลี่ยน str เป็น int\n",
+        "                               # เปลี่ยนเลข 6 เป็นตัวหนังสือ\n",
         "print(f'ตัวแปร str_a2int ค่าคือ {str_a2int} ชนิด {type(str_a2int)}')"
       ],
       "metadata": {
@@ -1528,7 +1540,7 @@
         "id": "53scNnO9dvdm",
         "outputId": "8b465711-0fc8-4219-b476-9c7c5479ea6a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,7 +1563,7 @@
         "id": "5POiVc3uePdf",
         "outputId": "b4047009-c86c-443c-ed80-31e31dba5a52"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,7 +1589,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1594,7 +1606,7 @@
     {
       "cell_type": "code",
       "source": [
-        "int(int_a + float(str_b))"
+        "int(int_a + float(str_b)) # ถ้าจะเปลี่ยนชนิด can ฟังก์ชันซ้อนกันเเล้วครอบได้เลย ต่อให้จะคนละชนิดก็ตาม"
       ],
       "metadata": {
         "id": "7mSgxHrTY39S",
@@ -1603,7 +1615,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1746,7 +1758,7 @@
     {
       "cell_type": "code",
       "source": [
-        "9%2 #การหาร เอาเศษ  เช็คได้ว่าเป็นคู่หรือคี่ #????????????เป็นคู่เป็นคี่ยังไง????????????"
+        "9%2 #การหาร เอาเศษ  เช็คได้ว่าเป็นคู่หรือคี่"
       ],
       "metadata": {
         "id": "O6oZ07y4gzAp",
@@ -1755,7 +1767,7 @@
         },
         "outputId": "c5494034-f6fc-4f41-aeb0-4c8b5ba0e684"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1807,7 +1819,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1963,7 +1975,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2001,7 +2013,7 @@
       "metadata": {
         "id": "0U-DcBWegmyN"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2016,7 +2028,7 @@
         "id": "AvdbZ-Nfg1Gd",
         "outputId": "0380ec0e-05fc-4457-b4a3-5c2520753ecf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2039,7 +2051,7 @@
         "id": "GwE71bEng2w-",
         "outputId": "a6ee0468-1d99-49e8-8006-2d79873b37eb"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2062,7 +2074,7 @@
         "id": "4rQGAi4bg4rh",
         "outputId": "091ad8c5-76c3-44e3-cb36-aa0e16ea57d5"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2086,7 +2098,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2109,7 +2121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2153,7 +2165,7 @@
         "id": "Nc7bjL5vhEAX",
         "outputId": "dc938f18-6b72-4e83-b43a-46d53824b917"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2213,7 +2225,7 @@
           "height": 34
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2233,13 +2245,32 @@
     {
       "cell_type": "code",
       "source": [
-        "'แถมเเแเเแ'.replace('เ เ','แ') #แทนที่สะเเอ 2 ตัวที่ติดกัน ด้วยสระเเอ"
+        "'เ เถมแ เ เ แแแ เ เ แ'.replace('เ เ','แ') #แทนที่สะเเอ 2 ตัวที่ติดกัน ด้วยสระเเอ"
       ],
       "metadata": {
-        "id": "f79c_0kQhxWr"
+        "id": "f79c_0kQhxWr",
+        "outputId": "ad780bdb-d2be-4f63-8241-2fe16b01603e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'แถมแ แ แแแ แ แ'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2313,7 +2344,8 @@
     {
       "cell_type": "code",
       "source": [
-        "'a b c d e f g'.split() #แยกด้วยช่องว่าง (ตัวนส.ที่มีช่องว่างจะมี , คั่น)"
+        "'a b c d e f g'.split() #แยกด้วยช่องว่าง\n",
+        "                             #ตรงช่องว่างรันแล้วจะมี , คั่น"
       ],
       "metadata": {
         "colab": {
@@ -2339,7 +2371,8 @@
     {
       "cell_type": "code",
       "source": [
-        "'a,b/c,d e/f g'.split('/') #แยกด้วย /"
+        "'a,b/c,d e/f g'.split('/') #แยกด้วย /\n",
+        "                                #ตรง / รันแล้วจะมี , คั่น"
       ],
       "metadata": {
         "colab": {
@@ -2375,7 +2408,7 @@
           "height": 34
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
