--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -850,7 +850,7 @@
       "metadata": {
         "id": "JHZ6zQrIyL2v"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1007,7 +1007,7 @@
         "id": "cdPQJNblFswJ",
         "outputId": "92bcaf58-07b1-4291-a0e9-0325bc7564cb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1043,7 @@
         "id": "KeHcmhGu0pUO",
         "outputId": "3c485bc4-e892-4b26-9f8a-66ef4227dcef"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1065,7 +1065,7 @@
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1081,7 @@
         "id": "M4XY3ySkHBMs",
         "outputId": "4e7d4655-9084-47d5-c8fd-3854b68ff624"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
         "id": "F8ow5gHvIMnL",
         "outputId": "60895dbd-c944-4aab-f6d7-f1e22c2f0f7a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
       "metadata": {
         "id": "Ttel8i5wHiOz"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1320,7 +1320,7 @@
         "id": "96EYWQyxIGLQ",
         "outputId": "ccc6cd21-dd2c-4d0d-de1a-5d09866e4957"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1372,14 +1372,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "คำนวณว่าช่วงเวลาต่อไปนี้ห่างกันกี่ชั่วโมง กี่นาทีกี่วินาที (print ออกมาให้สวยงาม)\n",
+        "คำนวณเวลาเป็นวินาทีของเวลาต่อไปนี้โดยใช้คำสั่ง split() ช่วย (print ออกมาให้สวยงาม)\n",
         "\n",
-        "- 12:30:15 - 13:41:07\n",
-        "- 13:41:07 - 21:30:15\n",
-        "- 09:11:50 - 03:10:15\n"
+        "12:30:15\n",
+        "13:41:07\n",
+        "09:11:50\n",
+        "21:30:15\n",
+        "03:10:15"
       ],
       "metadata": {
-        "id": "OZlParATO7fx"
+        "id": "jkhpyBYSRiiD"
       }
     },
     {
@@ -1404,9 +1406,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yMsFteIzJdjm",
-        "outputId": "316d5341-4a95-4aff-d080-c86ebc003ee9"
+        "outputId": "21ce9775-fb1c-4297-fc37-7d962845ba41"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1603,6 +1605,192 @@
           "name": "stdout",
           "text": [
             " 03:10:15 แปลงเป็นวินาที ได้ 11,415 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HW"
+      ],
+      "metadata": {
+        "id": "RHioDtJyRn-O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "คำนวณว่าช่วงเวลาต่อไปนี้ห่างกันกี่ชั่วโมง กี่นาที กี่วินาที (printออกมาให้สวยงาม)\n",
+        "\n",
+        "- 12:30:15 - 13:41:07\n",
+        "- 09:11:50 - 21:30:15\n",
+        "- 19:25:30 - 03:10:15\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OZlParATO7fx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ข้อที่ 1**\n",
+        "\n",
+        "12:30:15 - 13:41:07"
+      ],
+      "metadata": {
+        "id": "BL7bnyk2tte9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q1 = '12:30:15'\n",
+        "Q1 = q1.split(\":\")\n",
+        "hours1 = int(Q1[0])*3600\n",
+        "minutes1 = int(Q1[1])*60\n",
+        "seconds1 = int(Q1[2])\n",
+        "\n",
+        "q2 = '13:41:07'\n",
+        "Q2 = q2.split(\":\")\n",
+        "hours2 = int(Q2[0])*3600\n",
+        "minutes2 = int(Q2[1])*60\n",
+        "seconds2 = int(Q2[2])\n",
+        "\n",
+        "c1 =  hours1 + minutes1 + seconds1\n",
+        "c2 =  hours2 + minutes2 + seconds2\n",
+        "r1 = c2 -c1\n",
+        "\n",
+        "hr = int(r1/3600)\n",
+        "min = int((r1%3600)/60)\n",
+        "sec = int(r1%60)\n",
+        "\n",
+        "print(f' ตั้งเเต่ 12:30:15 - 13:41:07 จะต่างกันเป็นเวลา {hr}ชั่วโมง {min}นาที {sec}วินาที')"
+      ],
+      "metadata": {
+        "id": "I0_SoUaTR2Cx",
+        "outputId": "2800c14c-4362-4633-b60a-12ea70a365b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " ตั้งเเต่ 12:30:15 - 13:41:07 จะต่างกันเป็นเวลา 1ชั่วโมง 10นาที 52วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ข้อ 2**\n",
+        "\n",
+        "09:11:50 - 21:30:15"
+      ],
+      "metadata": {
+        "id": "CIyvyDvizrg5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q3 = '09:11:50'\n",
+        "Q3 = q3.split(\":\")\n",
+        "hours3 = int(Q3[0])*3600\n",
+        "minutes3 = int(Q3[1])*60\n",
+        "seconds3 = int(Q3[2])\n",
+        "\n",
+        "q4 = '21:30:15'\n",
+        "Q4 = q4.split(\":\")\n",
+        "hours4 = int(Q4[0])*3600\n",
+        "minutes4 = int(Q4[1])*60\n",
+        "seconds4 = int(Q4[2])\n",
+        "\n",
+        "c3 =  hours3 + minutes3 + seconds3\n",
+        "c4 =  hours4 + minutes4 + seconds4\n",
+        "r2 = c4 -c3\n",
+        "\n",
+        "hr = int(r2/3600)\n",
+        "min = int((r2%3600)/60)\n",
+        "sec = int(r2%60)\n",
+        "\n",
+        "print(f' ตั้งแต่ 09:11:50 - 21:30:15 จะต่างกันเป็นเวลา {hr}ชั่วโมง {min}นาที {sec}วินาที')"
+      ],
+      "metadata": {
+        "id": "LBWeErTXz2PN",
+        "outputId": "3ba49d5e-a903-41a0-ea57-018656a521a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " ตั้งแต่ 09:11:50 - 21:30:15 จะต่างกันเป็นเวลา 12ชั่วโมง 18นาที 25วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ข้อ 3**\n",
+        "\n",
+        "19:25:30 - 03:10:15"
+      ],
+      "metadata": {
+        "id": "IPitKQH73AcL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q5 = '19:25:30'\n",
+        "Q5 = q5.split(\":\")\n",
+        "hours5 = int(Q5[0])*3600\n",
+        "minutes5 = int(Q5[1])*60\n",
+        "seconds5 = int(Q5[2])\n",
+        "\n",
+        "q6 = '03:10:15'\n",
+        "Q6 = q6.split(\":\")\n",
+        "hours6 = int(Q6[0])*3600\n",
+        "minutes6 = int(Q6[1])*60\n",
+        "seconds6 = int(Q6[2])\n",
+        "\n",
+        "c5 =  hours5 + minutes5 + seconds5\n",
+        "c6 =  hours6 + minutes6 + seconds6 + (24*60*60) #เกินเป็นอีกวัน\n",
+        "r3 = c6 -c5\n",
+        "\n",
+        "hr = int(r3/3600)\n",
+        "min = int((r3%3600)/60)\n",
+        "sec = int(r3%60)\n",
+        "\n",
+        "print(f'ตั้งแต่ 19:25:30 - 03:10:15 จะต่างกันเป็นเวลา {hr}ชั่วโมง {min}นาที {sec}วินาที')"
+      ],
+      "metadata": {
+        "id": "ckG8U2iF3Egk",
+        "outputId": "9d7b10bf-740d-4b3f-a969-d4b6cce2dd4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ตั้งแต่ 19:25:30 - 03:10:15 จะต่างกันเป็นเวลา 7ชั่วโมง 44นาที 45วินาที\n"
           ]
         }
       ]
