--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -1408,7 +1408,7 @@
         "id": "yMsFteIzJdjm",
         "outputId": "21ce9775-fb1c-4297-fc37-7d962845ba41"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1676,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1730,7 +1730,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1784,7 +1784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2342,7 +2342,7 @@
       "metadata": {
         "id": "hXAdabpKYT-3"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2353,7 +2353,7 @@
       "metadata": {
         "id": "3iH_fTnEYKgd"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2366,9 +2366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pMXNzWApY9KO",
-        "outputId": "7aa97a91-a87e-4a13-f987-68a82819ff70"
+        "outputId": "74325459-e8d0-4872-c8a1-e7fe59730aee"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2379,7 +2379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 5
         }
       ]
     },
@@ -3059,9 +3059,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW 3\n",
-        "\n",
-        "\n",
+        "## ~HW 3~\n",
         "1. สร้าง array ที่เป็นรูป ต้น Christmas\n",
         "2. slice เลข 1 ออกมาจาก array HW3 ด้วยการ slice เเค่ครั้งเดียว"
       ],
@@ -3097,12 +3095,12 @@
       ],
       "metadata": {
         "id": "AH89XVcP8KRi",
-        "outputId": "4004393f-57ba-4d3f-9ad3-c19938ddf637",
+        "outputId": "8c7cb6e1-72a2-4f69-b29d-d857225bca06",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -3236,6 +3234,70 @@
           },
           "metadata": {},
           "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HW 2 สร้าง logo พรรคก้าวไกล"
+      ],
+      "metadata": {
+        "id": "IaX7K9L6ueEq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logo =  np.zeros((12,20))\n",
+        "\n",
+        "#นอก\n",
+        "logo[1,1:19] = 1\n",
+        "logo[2,2:18] = 1\n",
+        "logo[3,15:17] = 1\n",
+        "logo[4,14:16] = 1\n",
+        "logo[5,13:15] = 1\n",
+        "logo[6,12:14] = 1\n",
+        "logo[7,11:13] = 1\n",
+        "logo[8,10:12] = 1\n",
+        "logo[9,9:11] = 1\n",
+        "logo[10,8:10] = 1\n",
+        "\n",
+        "#ใน\n",
+        "logo[4,3:11] = 1\n",
+        "logo[5,4:10] =1\n",
+        "logo[6,7:9] = 1\n",
+        "logo[7,6:8] =1\n",
+        "logo[8,5:7] = 1\n",
+        "\n",
+        "print(logo)"
+      ],
+      "metadata": {
+        "id": "RfdKRqCoxhRt",
+        "outputId": "d95f65b6-6cc4-47db-a67b-7068b71fbd42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 0.]\n",
+            " [0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+          ]
         }
       ]
     },
