--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -76,7 +76,7 @@
         },
         "outputId": "10b17b3f-2894-4015-c4b9-f9e62f5dd177"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
         "id": "lwE0P085D0zG",
         "outputId": "1b0ccbd0-6a54-4b4c-9f88-c2f0bd69add5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +628,7 @@
       "metadata": {
         "id": "OjXbkUvQU1H3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +645,7 @@
         "id": "O_PQSREoUn-6",
         "outputId": "12356dac-c970-4165-cf2f-c334486b8b83"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,11 +1032,83 @@
       "cell_type": "markdown",
       "source": [
         "## HW 2.5\n",
-        "เราสร้าง Function priny logo พรรคก้าวไกล โดย input พื้นหลัง"
+        "เราสร้าง Function priny logo พรรคก้าวไกล โดย input พื้นหลังได้"
       ],
       "metadata": {
         "id": "xxIjy11YIZtH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "Background = 0\n",
+        "logo = Background * np.ones((17,18))\n",
+        "B = 5\n",
+        "# พื้นหลัง\n",
+        "logo[1:2,:17] = B\n",
+        "logo[2:3,1:16] = B\n",
+        "logo [3:4,13:16] = B\n",
+        "logo [4:5,13:15] = B\n",
+        "logo [5:6,12:14] = B\n",
+        "logo [6:7,3:10] = B\n",
+        "logo [6:7,12:14] = B\n",
+        "logo [7:8,11:13] = B\n",
+        "logo [8:9,11:13] = B\n",
+        "logo [9:10,6:8] = B\n",
+        "logo [9:10,10:12] = B\n",
+        "logo [10:11,10:12] = B\n",
+        "logo [11:12,9:11] = B\n",
+        "logo [12:13,9:11] = B\n",
+        "logo [13:14,8:10] = B\n",
+        "logo [14:15,8:10] = B\n",
+        "logo [15:16,7:9] = B\n",
+        "\n",
+        "#พรรคก้าวไกล\n",
+        "logo [5:6,2:10] = B\n",
+        "logo [6:7,3:10] = B\n",
+        "logo [7:8,3:9] = B\n",
+        "logo [8:9,7:9] = B\n",
+        "logo [9:10,6:8] = B\n",
+        "logo [10:11,6:8] = B\n",
+        "logo [11:12,5:7] = B\n",
+        "logo [12:13,5:7] = B\n",
+        "\n",
+        "print(logo)"
+      ],
+      "metadata": {
+        "id": "ypEr2W9jAe2A",
+        "outputId": "a65a41c3-7405-46d6-bb06-8878e98197bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 0.]\n",
+            " [0. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 5. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0.]\n",
+            " [0. 0. 5. 5. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 5. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
