--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -1040,72 +1040,101 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HYKVfgXu4TMV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "Background = 0\n",
-        "logo = Background * np.ones((17,18))\n",
-        "B = 5\n",
-        "# พื้นหลัง\n",
-        "logo[1:2,:17] = B\n",
-        "logo[2:3,1:16] = B\n",
-        "logo [3:4,13:16] = B\n",
-        "logo [4:5,13:15] = B\n",
-        "logo [5:6,12:14] = B\n",
-        "logo [6:7,3:10] = B\n",
-        "logo [6:7,12:14] = B\n",
-        "logo [7:8,11:13] = B\n",
-        "logo [8:9,11:13] = B\n",
-        "logo [9:10,6:8] = B\n",
-        "logo [9:10,10:12] = B\n",
-        "logo [10:11,10:12] = B\n",
-        "logo [11:12,9:11] = B\n",
-        "logo [12:13,9:11] = B\n",
-        "logo [13:14,8:10] = B\n",
-        "logo [14:15,8:10] = B\n",
-        "logo [15:16,7:9] = B\n",
         "\n",
-        "#พรรคก้าวไกล\n",
-        "logo [5:6,2:10] = B\n",
-        "logo [6:7,3:10] = B\n",
-        "logo [7:8,3:9] = B\n",
-        "logo [8:9,7:9] = B\n",
-        "logo [9:10,6:8] = B\n",
-        "logo [10:11,6:8] = B\n",
-        "logo [11:12,5:7] = B\n",
-        "logo [12:13,5:7] = B\n",
+        "def BB(x,y):\n",
+        "  b = x * np.ones((20,18))\n",
+        "  kaoki = y\n",
+        "#วงนอก\n",
+        "  b[1,1:17] = kaoki\n",
+        "  b[2,1:17] = kaoki\n",
+        "  b[3,16:17] = kaoki\n",
+        "  b[4,15:17] = kaoki\n",
+        "  b[5,14:16] = kaoki\n",
+        "  b[6,13:15] = kaoki\n",
+        "  b[7,12:14] = kaoki\n",
+        "  b[8,11:13] = kaoki\n",
+        "  b[9,10:12] = kaoki\n",
+        "  b[10,9:11] = kaoki\n",
+        "  b[11,8:10] = kaoki\n",
+        "  b[12,7:9] = kaoki\n",
+        "  b[13,6:8] = kaoki\n",
+        "  b[14,5:7] = kaoki\n",
+        "  b[15,4:6] = kaoki\n",
+        "  b[16,3:5] = kaoki\n",
+        "  b[17,2:4] = kaoki\n",
+        "  b[18,1:3] = kaoki\n",
         "\n",
-        "print(logo)"
+        "#วงใน\n",
+        "\n",
+        "  b[4,1:13] = kaoki\n",
+        "  b[5,1:12] = kaoki\n",
+        "  b[6,9:11] = kaoki\n",
+        "  b[7,8:10] = kaoki\n",
+        "  b[8,7:9] = kaoki\n",
+        "  b[9,6:8] = kaoki\n",
+        "  b[10,5:7] = kaoki\n",
+        "  b[11,4:6] = kaoki\n",
+        "  b[12,3:5] = kaoki\n",
+        "  b[13,2:4] = kaoki\n",
+        "  b[14,1:3] = kaoki\n",
+        "\n",
+        "  print(b)\n"
       ],
       "metadata": {
-        "id": "ypEr2W9jAe2A",
-        "outputId": "a65a41c3-7405-46d6-bb06-8878e98197bc",
+        "id": "3pIJSo2y3BK9"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "BB(5,9)"
+      ],
+      "metadata": {
+        "id": "858003_F3sS3",
+        "outputId": "d57f6b2d-e779-4856-a30f-b22966aa3a27",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 0.]\n",
-            " [0. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 5. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0.]\n",
-            " [0. 0. 5. 5. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 5. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 5. 5. 5. 5. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 5. 5. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 5. 5. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+            "[[5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 5.]\n",
+            " [5. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 9. 5.]\n",
+            " [5. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 5. 5. 9. 9. 5.]\n",
+            " [5. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 9. 5. 5. 9. 9. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 9. 9. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 9. 9. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+            " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]]\n"
           ]
         }
       ]
