--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -1198,8 +1198,8 @@
       "source": [
         "### operator ที่ใช้ตรวจสอบ condition\n",
         "\n",
-        "== (เท่ากับ) , != (ไม่เท่ากับ), >=, <=, <, >, and, or\n",
-        "- ผลลัพธ์มีแค่ Ture flase"
+        "== (เท่ากับ) , != (ไม่เท่ากับ), >=, <=, <, >, and, or,&,|\n",
+        "- ผลลัพธ์มีแค่ True False"
       ],
       "metadata": {
         "id": "AepkrHEKkA7v"
@@ -1208,17 +1208,17 @@
     {
       "cell_type": "code",
       "source": [
-        "a = 10 == 20\n",
+        "a = 10 == 20 # ตัวแปร a=10 มีค่าเท่ากับ 20 มั้ย\n",
         "print(a)"
       ],
       "metadata": {
         "id": "sw23UdfnkASr",
-        "outputId": "69d2f823-f84b-4c2a-e629-97a2c3d06ab3",
+        "outputId": "a581771f-5b55-485c-b4fa-99c8c2fccf9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,9 +1240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MpOwImpecOYE",
-        "outputId": "44b7b73a-e32e-4e69-8e2a-83e324bf4938"
+        "outputId": "eb4ae1c7-2a5d-4832-8c81-4a33bcab8c97"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
     {
       "cell_type": "code",
       "source": [
-        "b = (15 <= 20) and (10==20)\n",
+        "b = (15 <= 20) and (10==20) # จริงเเละเท็จ เป็นเท็จ\n",
         "print(b)"
       ],
       "metadata": {
@@ -1264,9 +1264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aT9-I2zzd87i",
-        "outputId": "e9232763-6e57-4f19-e1a2-8606e487efed"
+        "outputId": "d2075bb2-fc38-4e9f-da34-344ddbdbcb03"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1286,7 +1286,7 @@
       "metadata": {
         "id": "88Hoo4AgcOTs"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1300,9 +1300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M7ye6epncOGL",
-        "outputId": "97c409fd-0cbd-4aa7-f9fd-656c29ef646d"
+        "outputId": "504e6305-e4d5-4609-c140-a4cd725ea20b"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1315,7 +1315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "gdx9D1eADPXK"
       },
@@ -1334,7 +1334,7 @@
       "metadata": {
         "id": "-_K6tNsklY0O"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
