--- a/Pandas102.ipynb
+++ b/Pandas102.ipynb
@@ -69,12 +69,12 @@
         "sep_df"
       ],
       "metadata": {
-        "id": "HOXBF9mtarNk",
-        "outputId": "25306b19-d6ce-43d2-cb0e-c4cda5e345e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "HOXBF9mtarNk",
+        "outputId": "25306b19-d6ce-43d2-cb0e-c4cda5e345e9"
       },
       "execution_count": 5,
       "outputs": [
@@ -1443,12 +1443,12 @@
         "sep_df"
       ],
       "metadata": {
-        "id": "SGwo-Cy-ZYul",
-        "outputId": "e553cfe1-5252-40d7-be9f-9c3ebe584bea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "SGwo-Cy-ZYul",
+        "outputId": "e553cfe1-5252-40d7-be9f-9c3ebe584bea"
       },
       "execution_count": 4,
       "outputs": [
@@ -2573,15 +2573,15 @@
     {
       "cell_type": "code",
       "source": [
-        "sep_df"
+        "sep_df[2:4][0:14]"
       ],
       "metadata": {
-        "id": "4xNj9Mu_bZj5",
-        "outputId": "367d2054-d712-44fd-e21d-609d7302ed14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
-        }
+        },
+        "id": "4xNj9Mu_bZj5",
+        "outputId": "367d2054-d712-44fd-e21d-609d7302ed14"
       },
       "execution_count": 10,
       "outputs": [
