--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -63,16 +63,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print('test') # ข้อความต้องครอบ เเต่รอบด้วย single/double quote ก็ได้"
+        "print('test') # string -> ครอบ single (' ')/double quote(\" \") ก็ได้\n",
+        "                #"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "utdkJE1fpq9v",
-        "outputId": "a1892687-6ed9-4198-8b06-0f5576a93ffd"
+        "outputId": "7e8355d2-8d33-4413-8a22-7dc07190ffb3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,6 +145,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "'1' # เลขต่อให้ครอบก็เป็น string"
+      ],
+      "metadata": {
+        "id": "ToeYuCDkk7b0",
+        "outputId": "0d98d74c-d4d0-478c-99a7-c652e832561a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## ผลการรันแสดงออกมา ได้ 2 แบบ\n",
@@ -164,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v0rQ1CHXRSMn",
-        "outputId": "637c8831-e723-48f3-caa7-582138dd478a"
+        "outputId": "78153bd7-155b-454d-aa5d-2586b529162b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +219,7 @@
       "metadata": {
         "id": "lWOn8HAbRhdK"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -299,18 +330,19 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#Syntax print\n",
+        "print(object(s), sep=separator, end=end)"
+      ],
       "metadata": {
-        "id": "2vSHXpadbvq3"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "rvuFonR7lqQk"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# print() -> separator"
+        "## print() -> separator"
       ],
       "metadata": {
         "id": "bDWsx70qbOAG"
@@ -319,22 +351,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print('stat','สถิติ')"
+        "print('a','b','c', sep = '       ') #ทำให้ห่าง"
       ],
       "metadata": {
+        "id": "M0SN0OzfmAue",
+        "outputId": "b70cd0e8-6ac1-422a-adfa-8eeb223270d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "vFS526J-a4Rb",
-        "outputId": "984187af-6bea-4b6e-ef11-6e1e2760e519"
+        }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "stat สถิติ\n"
+            "a       b       c\n"
           ]
         }
       ]
@@ -363,9 +395,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print('a','b','c', sep = '    ,   ') #ทำให้ห่าง"
+      ],
+      "metadata": {
+        "id": "GNuo8_HMnBwX",
+        "outputId": "df8ad4fb-4098-4717-e9f9-93934632eb44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a    ,   b    ,   c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('stat','สถิติ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vFS526J-a4Rb",
+        "outputId": "984187af-6bea-4b6e-ef11-6e1e2760e519"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "stat สถิติ\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "# Print() -> end"
+        "## Print() -> end\n",
+        "\n",
+        "ให้จบด้วยอะไร (พื้นฐาน \\n จบบรรทัด)"
       ],
       "metadata": {
         "id": "TanIAzxUSeWV"
@@ -382,9 +462,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ikYLLloFSnrD",
-        "outputId": "9560dd00-c402-4b8d-ae3f-5742ea427323"
+        "outputId": "104f934f-dbb1-481b-f9f2-5a09a7ce44f1"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,14 +487,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BHM4ehYIc5Ci",
-        "outputId": "a5c32c17-7192-4b58-f297-21f02f31ae41"
+        "outputId": "0aa5d441-5289-410b-e00b-ea3e06944522"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "stat, SIDS\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('stat')\n",
+        "print('SIDS')\n",
+        "print('stat', end=', ')     # ข้อความอยู่บรรทัดเดียวกัน\n",
+        "print('SIDS')"
+      ],
+      "metadata": {
+        "id": "fevGbVzEnvSz",
+        "outputId": "e338a031-a09f-4ea5-99be-4168200ac86b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "stat\n",
+            "SIDS\n",
             "stat, SIDS\n"
           ]
         }
@@ -504,7 +612,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### modulo(%) การหารเอาเศษ"
+        "### modulo(%) การหารเอาเศษ (ไม่เอาส่วน)"
       ],
       "metadata": {
         "id": "Q0tISp3teILN"
@@ -613,7 +721,7 @@
     {
       "cell_type": "code",
       "source": [
-        "5*'6'"
+        "5*'6' # เบิ้ลจน.string ด้วยการคูณ"
       ],
       "metadata": {
         "colab": {
@@ -706,6 +814,72 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### ลองทำ"
+      ],
+      "metadata": {
+        "id": "cmWGkr5iqnh7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print ('A'+('I'*26)+'A')"
+      ],
+      "metadata": {
+        "id": "HAJ4IFCRojOd",
+        "outputId": "58b1eaeb-ed3f-4a48-e21f-8b0594362c0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AIIIIIIIIIIIIIIIIIIIIIIIIIIA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "เขียนชื่อตัวเอง 2 รอบ ให้คั่นด้วยขีด(- -) เเละจบเเสดงว่าจบ"
+      ],
+      "metadata": {
+        "id": "iEgxF7KIpwD8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('บีม','บีม' ,'บีม' , sep = ' - ' , end ='\\nจบ')\n",
+        "##"
+      ],
+      "metadata": {
+        "id": "A_gfClxTpNLw",
+        "outputId": "cba89a45-9fc1-466e-8b8c-229eab62daff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "บีม - บีม - บีม\n",
+            "จบ"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## ข้อกำหนดในการตั้งชื่อตัวแปร\n",
         "1. พยายามตั้งชื่อให้สื่อความหมาย\n",
         "2. ต้องเป็นภาษาอังกฤษ\n",
@@ -722,6 +896,7 @@
       "source": [
         "## Advanced Printing ( print code ร่วมกับข้อความ)\n",
         "เราสามารถ print code ร่วมกับข้อความได้\n",
+        "** { } มาคู่กับ f\n",
         "\n",
         "```python\n",
         "print(f'ข้อความ{code}')\n",
@@ -738,7 +913,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'หนึ่ง บวก สอง (1+2) เท่ากับ สาม ({1+2})')  # {}  Curly Brackets เอาไว้ใส่ code"
+        "print(f'หนึ่ง บวก สอง (1+2) เท่ากับ สาม ({1+2})')  # {}  Curly Brackets เอาไว้ใส่ code ที่อยากให้ผลรันคำนวณรวมกับข้อความได้\n",
+        ""
       ],
       "metadata": {
         "colab": {
@@ -2255,7 +2431,7 @@
           "height": 34
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
