--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lBLVhL424rtV"
       },
@@ -76,7 +76,7 @@
         "id": "VBCxSIQC6iAQ",
         "outputId": "5263a33c-b5d8-484e-cdc5-195eb2c07468"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "0-6XIDg56m19"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "id": "jB4-bDxy7BWW",
         "outputId": "ae9deb01-7596-4f10-e0fd-7add7726c2f4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
         "id": "wmoH2mdO7CE6",
         "outputId": "a472f7c7-6003-4941-e032-cba5ae6567f0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
         "id": "rzX2-3H97jps",
         "outputId": "c21930e5-8a27-492a-d125-598d9d3fd789"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
         "id": "Zh4n8eRa7oxX",
         "outputId": "5f0c5aff-fcea-4b43-8e09-3f399817636a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +232,7 @@
         "id": "nUM_19Zh796m",
         "outputId": "92e64cb2-f531-48b7-83a9-a7708d4f8a5b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "w8j852-N9D0C"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "id": "1A40gYHq9sFO",
         "outputId": "9712f4fa-d2af-4182-f129-5c7f9227f894"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +390,7 @@
         "id": "xNF6VMfc99Dd",
         "outputId": "99295781-97ae-422d-dc6c-5935bec3cdd4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "CUIwBVuV-FAh"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +461,7 @@
         "id": "UVUUwRgp-wMm",
         "outputId": "9d5260bb-5d01-4831-b64d-cd40310735b8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +484,7 @@
         "id": "zbIiLEnw-82e",
         "outputId": "db471608-ce69-45bf-8536-7544c4e5795d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +536,7 @@
         "id": "5QR-pmG7_PXg",
         "outputId": "a05791ed-0b83-4688-af99-0d8465053609"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "A1GwZXQK_rgv"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +589,7 @@
         "id": "YQemZt1K_wEu",
         "outputId": "9e31db99-59a0-4320-b76a-725b5c609c29"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +611,7 @@
       "metadata": {
         "id": "srdLQdTO_ySd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
         "id": "xxK-PnT4AFby",
         "outputId": "e518ab2f-28bb-45bb-91a1-f5d04be4bea5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
         "id": "mpE1ncDWAGrf",
         "outputId": "26f65f6a-4903-4161-83b4-ed2e627ee7b8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
         "id": "OK9PKivxALUU",
         "outputId": "14e44924-8907-4c33-c641-3a130fbf8ef9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +716,7 @@
         "id": "gbb9xpgyAS6u",
         "outputId": "badede15-c00b-4e3f-e9f5-e5daa361a028"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +740,7 @@
         "id": "nDEGsAJKCJFk",
         "outputId": "23b04274-be3a-4e51-83fb-fc3ce2035874"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
       "metadata": {
         "id": "4F9BnrfFCRLh"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +787,7 @@
         "id": "luQgyqalC9HO",
         "outputId": "ebc8e6b5-500f-4388-b98e-5875d0e155d6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
       "metadata": {
         "id": "JHZ6zQrIyL2v"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -875,7 +875,7 @@
         "id": "2_JrbypKDNaE",
         "outputId": "37b5aa8e-b94e-4df6-d262-10c8170408db"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -901,7 +901,7 @@
         "id": "SC-N7iabDvI_",
         "outputId": "36da12c9-d783-454f-dc8f-b845bc88076e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1184,7 +1184,7 @@
       "metadata": {
         "id": "1LrxE0aM2THl"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,7 +1200,7 @@
         "id": "f6MBsGyo4F81",
         "outputId": "9f67bec4-ecd3-4832-e322-6078cf4739b2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1253,7 +1253,7 @@
         "id": "IUltAT4851xF",
         "outputId": "0ec0ed35-ae11-4402-c69e-a797b8fa7123"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1313,7 @@
           "height": 34
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1526,115 +1526,26 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "ข้อที่ 2"
-      ],
-      "metadata": {
-        "id": "0zJKPUAFBp83"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "q2 = '13:41:07'\n",
-        "Q2 = q2.split(\":\")\n",
-        "hours2 = int(Q2[0])*3600\n",
-        "minutes2 = int(Q2[1])*60\n",
-        "seconds2 = int(Q2[2])\n",
-        "f2 =  hours2 + minutes2 + seconds2\n",
-        "print(f' {q2} แปลงเป็นวินาที ได้ {f2:,} วินาที')"
+        "# 12:30:15\n",
+        "a=(12*60*60)+(30*60)+(15)\n",
+        "print(f'12:30:15 แปลงเป็นวินาทีจะได้ {a}วินาที')"
       ],
       "metadata": {
-        "id": "yg6heIe-Bnlf",
-        "outputId": "bc122184-b525-46fa-a6d9-710de27d5c49",
+        "id": "qJwMWb_PjYP9",
+        "outputId": "8348bff6-4ba3-41e1-f836-88fd4eadb49e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " 13:41:07 แปลงเป็นวินาที ได้ 49,267 วินาที\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "ข้อที่ 3"
-      ],
-      "metadata": {
-        "id": "25-P9-a9B4i5"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "q3 = '09:11:50'\n",
-        "Q3 = q3.split(\":\")\n",
-        "hours3 = int(Q3[0])*3600\n",
-        "minutes3 = int(Q3[1])*60\n",
-        "seconds3 = int(Q3[2])\n",
-        "f3 =  hours3 + minutes3 + seconds3\n",
-        "print(f' {q3} แปลงเป็นวินาที ได้ {f3:,} วินาที')"
-      ],
-      "metadata": {
-        "id": "tPLpjXJYBwHR",
-        "outputId": "e60d2e76-28d4-4fd9-8195-e90ef915dd7c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " 09:11:50 แปลงเป็นวินาที ได้ 33,110 วินาที\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "ข้อที่ 4"
-      ],
-      "metadata": {
-        "id": "puaJ-2SDCMBE"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "q4 = '21:30:15'\n",
-        "Q4 = q4.split(\":\")\n",
-        "hours4 = int(Q4[0])*3600\n",
-        "minutes4 = int(Q4[1])*60\n",
-        "seconds4 = int(Q4[2])\n",
-        "f4 =  hours4 + minutes4 + seconds4\n",
-        "print(f' {q4} แปลงเป็นวินาที ได้ {f4:,} วินาที')"
-      ],
-      "metadata": {
-        "id": "2KsNwr_OB7_c",
-        "outputId": "a1690c10-096b-424f-b5d5-122ef0279708",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " 21:30:15 แปลงเป็นวินาที ได้ 77,415 วินาที\n"
+            "12:30:15 แปลงเป็นวินาทีจะได้ 45015วินาที\n"
           ]
         }
       ]
@@ -1680,7 +1591,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW"
+        "## HW 1"
       ],
       "metadata": {
         "id": "RHioDtJyRn-O"
